# equation-tree

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
Additional Example/: index.html
Basic Usage/: Basic Usage.ipynb  index.html
dev/: _hashed_probabilities.json  burn.py  burn_hash.py
docs/: Additional Example.ipynb  Basic Usage.ipynb  index.md  quickstart.md
docs/tutorials/: Analysing Equation Distribution.ipynb  Distance Metrics.ipynb
docs/user-guide/: additional-features.md  equation-formats.md
mkdocs/: gen_ref_pages.py  hooks.py
mkdocs/overrides/: main.html
playground/: feynman_priors.py  play.py  temp.json
quickstart/: index.html  quickstart.md
reference/SUMMARY/: SUMMARY.md  index.html
reference/src/equation_tree/: index.html  index.md
reference/src/equation_tree/analysis/: analysis.md  index.html
reference/src/equation_tree/defaults/: defaults.md  index.html
search/: search_index.json
src/equation_tree/: __init__.py  _tree.py  analysis.py  defaults.py  equation_tree.py  metrics.py  prior.py  sample.py  tree.py
src/equation_tree/data/: _hashed_probabilities.json
src/equation_tree/sample/: tree.py  tree_structure.py
src/equation_tree/src/: sample_tree_structure.py  tree_node.py
src/equation_tree/util/: conversions.py  io.py  priors.py  type_check.py
tests/: test_equation_tree.py
tutorials/Analysing Equation Distribution/: index.html
tutorials/Basic Usage/: Basic Usage.ipynb  index.html
tutorials/Distance Metrics/: index.html
user-guide/additional-features/: index.html
user-guide/distance-metrics/: distance-metrics.md  index.html
user-guide/equation-formats/: index.html
user-guide/equation-sampling/: equation-sampling.md  index.html
user-guide/sampling/: index.html  sampling.md
(+24 files in other folders)
